5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1671_1100.log
== TEST (2019-04-22 15:30:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = input("valor cedula: ")
if(v = 2):
	print("tartatura")
	else: 
		if(v = 5)
			print("garca")
			
-- ERROR:
File "XXXX", line 6
    if(v = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = input("valor cedula: ")
print("Entrada:", v)

if (v = 2):
	print("Tartatura")
elif (v = 5):
	print("Garca")
			
-- ERROR:
File "XXXX", line 8
    if (v = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = input("valor cedula: ")
print("Entrada:", v)

if (v = "2"):
	print("Tartatura")
elif (v = "5"):
	print("Garca")
			
-- ERROR:
File "XXXX", line 8
    if (v = "2"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:33:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))
print("Entrada:", v)

if (v = 2):
	print("Tartatura")
elif (v = 5):
	print("Garca")
else: 
	
			
-- ERROR:
File "XXXX", line 8
    if (v = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))
print("Entrada:", v)

if (v = 2):
	print("Animal: Tartatura")
elif (v = 5):
	print("Animal: Garca")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 8
    if (v = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v = 2):
	print("Animal: Tartatura")
elif (v = 5):
	print("Animal: Garca")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 9
    if (v = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if(v = 2):
	print("Animal: Tartatura")
elif (v = 5):
	print("Animal: Garca")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 9
    if(v = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:35:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if ( v = 2):
	print("Animal: Tartatura")
elif ( v = 5):
	print("Animal: Garca")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 9
    if ( v = 2):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:35:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if ( v = 2 ):
	print("Animal: Tartatura")
elif ( v = 5 ):
	print("Animal: Garca")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 9
    if ( v = 2 ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:35:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v = 2):
	print("Animal: Tartatura")
elif (v = 5):
	print("Animal: Garca")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 9
    if (v = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:37:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v = 2):
	print("Animal: Tartatura")
elif (v = 5):
	print("Animal: Garca")
elif (v = 10):
	print("Animal: Mico-leao-dourado")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
File "XXXX", line 9
    if (v = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:37:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v == 2):
	print("Animal: Tartatura")
elif (v == 5):
	print("Animal: Garca")
elif (v == 10):
	print("Animal: Mico-leao-dourado")
else: 
	print("Animal: invalido")
	
			
-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:39:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v == 2):
	print("Animal: Tartatura")
elif (v == 5):
	print("Animal: Garca")
elif (v == 10):
	print("Animal: Arara")
elif (v == 20):
	print("Animal: Mico-leao-dourado")
elif (v == 50):
	print("Animal: Onca-pintada")
elif (v == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
	
			
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:39:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v == 2):
	print("Animal: Tartatura")
elif (v == 5):
	print("Animal: Garca")
elif (v == 10):
	print("Animal: Arara")
elif (v == 20):
	print("Animal: Mico-leao-dourado")
elif (v == 50):
	print("Animal: Onca-pintada")
elif (v == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
	
			
-- EXECUTION TIME:
0.206647
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:41:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v == 2):
	print("Animal: Tartatura")
elif (v == 5):
	print("Animal: Garca")
elif (v == 10):
	print("Animal: Arara")
elif (v == 20):
	print("Animal: Mico-leao-dourado")
elif (v == 50):
	print("Animal: Onca-pintada")
elif (v == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
	
			
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:42:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

v = int(input("valor cedula: "))

print("Entrada:", v)

if (v == 2):
	print("Animal: Tartatura")
elif (v == 5):
	print("Animal: Garca")
elif (v == 10):
	print("Animal: Arara")
elif (v == 20):
	print("Animal: Mico-leao-dourado")
elif (v == 50):
	print("Animal: Onca-pintada")
elif (v == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
	
			
-- EXECUTION TIME:
0.16357
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:42:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (v == 2):
	print("Animal: Tartatura")
elif (v == 5):
	print("Animal: Garca")
elif (v == 10):
	print("Animal: Arara")
elif (v == 20):
	print("Animal: Mico-leao-dourado")
elif (v == 50):
	print("Animal: Onca-pintada")
elif (v == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (v == 2):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:43:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:43:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- EXECUTION TIME:
0.151295
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:45:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:45:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 502020):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:46:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 502020):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:46:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:46:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:46:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- EXECUTION TIME:
0.156914
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:47:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:47:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.14968
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:47:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
